--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "周易"
   ],
-  "author": "草木灰",
+  "author": "江湖术士",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/lisiming789/zhouyi/issues"
